Stubbing Feature details

--- a/source/sass/config/_variables.scss
+++ b/source/sass/config/_variables.scss
@@ -44,7 +44,6 @@ $expander-three: 240px;
 $expander-mobile: 30px;
 
 // Horizontal
-$mobile-padding: 30px;
 $wrapper-padding: 9%;
 $wrapper-padding-big: 18%;
 
@@ -58,6 +57,7 @@ $reel-aspect: 41.875%;
 $cinema-aspect: 56.25%;
 $filter-width: 480px;
 $header-height: 100px;
+$col-width: 780px;
 
 
 
