--- a/source/sass/screen.scss
+++ b/source/sass/screen.scss
@@ -27,11 +27,11 @@
 @import "modules/header";
 @import "modules/navigation";
 @import "modules/screens";
-//@import "modules/covers";
 @import "modules/animate";
 @import "modules/classes";
 @import "modules/index";
 @import "modules/refine";
+@import "modules/features";
 
 
 
