--- a/source/sass/state/_states.scss
+++ b/source/sass/state/_states.scss
@@ -58,3 +58,12 @@
         display: inline-block;
         }
 }
+
+.is-feature-page {
+    .page {
+        padding-top: 0
+        }
+    .header {
+        background-color: transparent;
+        }
+}
