--- a/source/sass/state/_modifiers.scss
+++ b/source/sass/state/_modifiers.scss
@@ -5,11 +5,12 @@
     padding-bottom: $expander-one;
     padding-top: $expander-one;
     }
+.-expp {
+    padding-bottom: $expander-three;
+    padding-top: $expander-three;
+    }
 .-exp-t {
     padding-top: $expander-one;
-    }
-.-exp-tt {
-    padding-top: $expander-one * 2;
     }
 .-exp-b {
     padding-bottom: $expander-one;
@@ -29,7 +30,15 @@
     padding-right: $wrapper-padding;
     }
 .-bump {
-    margin-top: $mobile-padding;
+    margin-top: $expander-mobile;
+    }
+.-col {
+    box-sizing: content-box;
+    display: inline-block;
+    max-width: $col-width;
+    padding-left: $wrapper-padding;
+    padding-right: $wrapper-padding;
+    width: 100%;
     }
 
 
