Design and function updates

--- a/source/sass/core/_document.scss
+++ b/source/sass/core/_document.scss
@@ -49,6 +49,6 @@ a {
 /******************************************************************************
  * User Agent
 *******************************************************************************/
-::-webkit-scrollbar {
-    display: none;
-    }
+// ::-webkit-scrollbar {
+//     display: none;
+//     }
