--- a/source/sass/core/_typography.scss
+++ b/source/sass/core/_typography.scss
@@ -48,6 +48,11 @@
 *******************************************************************************/
 .a {
     @include a();
+    transition: color $base-duration $ease;
+
+    &:hover {
+        color: $black;
+        }
     }
 
 
