--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -71,7 +71,7 @@
 
         <!-- Nav -->
         <nav class="nav js-nav screen ghost is-hidden">
-            <div class="nav__wrap -wrap ghost__child">
+            <div class="nav__wrap -wrap ghost__child animate animate--lift">
                 <div class="-column -column--2of4">
                     <a href="/" class="nav__logo">
                         <svg class="nav__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="1522 -198 3684 1036" xml:space="preserve"><rect x="1531" y="91.8" width="168.2" height="719.2"/><path d="M5081.1 596.4c-63.4 0-115.3 51.9-115.3 116.7 0 63.4 51.9 115.3 115.3 115.3 64.8 0 116.7-51.9 116.7-115.3C5197.8 648.3 5145.9 596.4 5081.1 596.4zM2272 73.2c-106.5 0-193.3 53.5-234.6 102.8V91.8h-168.2V811h168.2V439c0-123.5 55.6-217.6 172.9-217.6 120.4 0 155.9 94.1 155.9 217.6v372h168.2V383.4c0-98.8-10.8-159-46.3-213C2448 110.2 2375.4 73.2 2272 73.2zM3245.6 173c-51.4-61.2-139-99.7-222.3-99.7 -219.2 0-368.9 174.4-368.9 378.1s149.7 378.1 368.9 378.1c83.4 0 174.8-41 222.3-99.7V811h168.2v-999h-168.2V173zM3032.6 679.8c-126.6 0-209.9-104.9-209.9-228.4S2906 223 3032.6 223c129.7 0 213 104.9 213 228.4S3162.2 679.8 3032.6 679.8z"/><polygon points="4901.2 91.8 4706.7 91.8 4574 317.1 4441.2 91.8 4246.7 91.8 4476.7 448.3 4242.1 811 4436.6 811 4574 579.5 4711.3 811 4905.8 811 4671.2 448.3 "/><path d="M3888.8 73.2c-226.9 0-355 162.1-355 378.1 0 211.5 117.3 378.2 359.6 378.2 183.7 0 293.8-99.6 322.6-234.6h-165.8c-20.1 51-61.1 87.9-156.8 87.9 -136.7 0-192.9-97.9-192.9-178.9H4219c1.7-19.5 2.5-38.7 2.5-56.8C4221.5 212.2 4083.5 73.2 3888.8 73.2zM3700.5 377c0-96 80.3-171.5 183.7-171.5 99.9 0 171.4 75.5 171.4 171.5H3700.5z"/></svg>
@@ -79,9 +79,11 @@
                 </div>
                 <div class="-column -column--2of4 -text--right">
                     <ul class="nav__menu ghost__child -exp">
-                        <li v-for="nav in navs" class="nav__menu__li nav__menu__{{nav.data.style.value}}">
-                            <a v-if="(nav.data.title.value !== 'Submit')" href="{{nav.data.url.value}}" class="nav__menu__a js-nav-item -grey {{nav.data.style.value === 'primary' ? 'h4' : 'p'}}">{{nav.data.title.value}}</a>
-                            <span v-else class="nav__menu__a js-controller--submit -grey h4">Submit</span>
+                        <li v-for="nav in navs" class="nav__menu__li nav__menu__primary">
+                            <span v-if="nav.data.title.value === 'Submit'" class="nav__menu__a js-controller--submit -grey h4">Submit</span>
+                            <a v-else href="{{nav.data.state.value === 'coming-soon' ? '#' : nav.data.url.value}}" class="nav__menu__a js-nav-item -grey h4 {{nav.data.state.value === 'coming-soon' ? 'is-coming-soon' : ''}}">
+                                {{nav.data.title.value}}
+                            </a>
                         </li>
                         <li v-for="social in socials" class="nav__menu__li nav__menu__tertiary">
                             <a href="{{social.data.url.value}}" class="nav__menu__a js-nav-item -grey p" target="_blank">{{social.data.title.value}}</a>
@@ -131,7 +133,7 @@
 
         <!-- Splash -->
         <section class="intro js-intro screen ghost -text--center is-active">
-            <h1 class="intro__text ghost__child">
+            <h1 class="intro__text ghost__child animate animate--lift">
                 <svg class="intro__svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="1522 -198 3684 1036" xml:space="preserve"><rect x="1531" y="91.8" width="168.2" height="719.2"/><path d="M5081.1 596.4c-63.4 0-115.3 51.9-115.3 116.7 0 63.4 51.9 115.3 115.3 115.3 64.8 0 116.7-51.9 116.7-115.3C5197.8 648.3 5145.9 596.4 5081.1 596.4zM2272 73.2c-106.5 0-193.3 53.5-234.6 102.8V91.8h-168.2V811h168.2V439c0-123.5 55.6-217.6 172.9-217.6 120.4 0 155.9 94.1 155.9 217.6v372h168.2V383.4c0-98.8-10.8-159-46.3-213C2448 110.2 2375.4 73.2 2272 73.2zM3245.6 173c-51.4-61.2-139-99.7-222.3-99.7 -219.2 0-368.9 174.4-368.9 378.1s149.7 378.1 368.9 378.1c83.4 0 174.8-41 222.3-99.7V811h168.2v-999h-168.2V173zM3032.6 679.8c-126.6 0-209.9-104.9-209.9-228.4S2906 223 3032.6 223c129.7 0 213 104.9 213 228.4S3162.2 679.8 3032.6 679.8z"/><polygon points="4901.2 91.8 4706.7 91.8 4574 317.1 4441.2 91.8 4246.7 91.8 4476.7 448.3 4242.1 811 4436.6 811 4574 579.5 4711.3 811 4905.8 811 4671.2 448.3 "/><path d="M3888.8 73.2c-226.9 0-355 162.1-355 378.1 0 211.5 117.3 378.2 359.6 378.2 183.7 0 293.8-99.6 322.6-234.6h-165.8c-20.1 51-61.1 87.9-156.8 87.9 -136.7 0-192.9-97.9-192.9-178.9H4219c1.7-19.5 2.5-38.7 2.5-56.8C4221.5 212.2 4083.5 73.2 3888.8 73.2zM3700.5 377c0-96 80.3-171.5 183.7-171.5 99.9 0 171.4 75.5 171.4 171.5H3700.5z"/></svg>
             </h1>
             <div class="intro__load">
@@ -142,8 +144,8 @@
         <!-- Submit -->
         <section class="submit js-submit screen ghost -text--center">
             <div class="submit__wrap ghost__child">
-                <div class="submit__message h4 -light">Thanks!</div>
-                <div class="submit__form">
+                <div class="submit__message h4 -light animate animate--lift">Thanks!</div>
+                <div class="submit__form animate animate--lift">
                     <input class="submit__field js-submit-field h4" type="text" placeholder="enter artist name or website" />
                     <button class="submit__button js-submit-button p">Submit</button>
                 </div>
@@ -157,7 +159,7 @@
                 <div v-if="noresults" class="-wrap -exp -f-zero">
                     <div class="h4">No Artists</div>
                 </div>
-                <div v-for="artist in documents" class="index__row -wrap -exp -f-zero -text--center {{artist.show ? 'animate animate--fade js-animate' : 'is-hidden'}}" data-uuid="{{artist.uuid}}">
+                <div v-for="artist in documents" class="index__row -wrap -exp -f-zero -text--center {{artist.show ? 'animate js-animate' : 'is-hidden'}}" data-uuid="{{artist.uuid}}">
                     <div class="index__col index__feature -column -text--left">
                         <div class="index__thumbnail">
                             <figure class="index__figure">
@@ -170,27 +172,38 @@
                     <div class="index__col index__name -column -text--left">
                         <a href="/artist/{{artist.uri}}/">
                             <p class="p">{{artist.data.name.value}}</p>
-                            <p class="p -grey" v-for="type in artist.data.types.value">{{type.type.value.data.name.value}}</p>
                         </a>
+                        <a href="/?type=types&customType=type&value={{type.type.value.data.name.value}}" class="p a -grey" v-for="type in artist.data.types.value">{{type.type.value.data.name.value}}</a>
                     </div>
                     <div class="index__col index__categories -column -text--left">
-                        <p class="p -grey" v-for="category in artist.data.categories.value">{{category.category.value.data.name.value}}</p>
+                        <a href="/?type=categories&customType=category&value={{category.category.value.data.name.value}}" class="p a -grey" v-for="category in artist.data.categories.value">{{category.category.value.data.name.value}}</a>
                     </div>
                     <div class="index__col index__location -column -text--left">
-                        <p class="p -grey">{{artist.data.city.value.data.name.value}}</p>
+                        <p class="p a -grey">{{artist.data.city.value.data.name.value}}</p>
                     </div>
                 </div>
             </section>
 
             <!-- Artist -->
             <article class="artist js-artist -f-zero -text--center">
-                <div class="artist__info js-artist-info -text--left -wrap">
-                    <div class="artist__info__item p">
-                        <p class="artist__name">{{artist.data.name.value}}</p>
-                        <p class="artist__types -grey" v-for="type in artist.data.types.value">{{type.type.value.data.name.value}}</p>
+                <div v-if="mobile" class="artist__mobile__image -wrap">
+                    <div v-if="mobile.video" class="video js-video" data-provider="{{mobile.video.value.oembed.provider_name.toLowerCase()}}" v-bind:style="{paddingBottom: mobile.video.value.oembed.height / mobile.video.value.oembed.width * 100 + '%'}">
+                        {{{artist.data.gallery.value[ 0 ].video.value.oembed.html.replace( 'feature=oembed', 'enablejsapi=1' )}}}
+                        <div class="video__poster js-lazy-image -cover" data-img-src="{{mobile.image ? mobile.image.value.image.url : mobile.video.value.oembed.thumbnail_url}}">
+                            <img class="video__play js-lazy-image" data-img-src="/images/playicon.png" />
+                        </div>
                     </div>
-                    <div class="artist__info__item artist__categories p -grey">
-                        <p v-for="category in artist.data.categories.value">{{category.category.value.data.name.value}}</p>
+                    <div v-else class="artist__gallery__image">
+                        <img class="image image--{{parseInt( mobile.image.value.image.width, 10 ) > parseInt( mobile.image.value.image.height, 10 ) ? 'wide' : 'tall'}} js-lazy-image" data-img-src="{{mobile.image.value.image.url}}" />
+                    </div>
+                </div>
+                <div class="artist__info js-artist-info -text--left -wrap">
+                    <div class="artist__info__item">
+                        <p class="artist__name p">{{artist.data.name.value}}</p>
+                        <a href="/?type=types&customType=type&value={{type.type.value.data.name.value}}" class="artist__types p a -grey" v-for="type in artist.data.types.value">{{type.type.value.data.name.value}}</a>
+                    </div>
+                    <div class="artist__info__item artist__categories">
+                        <a href="/?type=categories&customType=category&value={{category.category.value.data.name.value}}" class="p a -grey" v-for="category in artist.data.categories.value">{{category.category.value.data.name.value}}</a>
                     </div>
                     <p class="artist__info__item artist__city p -grey">{{artist.data.city.value.data.name.value}}</p>
                     <div class="artist__info__item">
@@ -203,7 +216,7 @@
                     </div>
                 </div>
                 <div class="artist__gallery -column">
-                    <div v-for="galleryItem in artist.data.gallery.value" class="artist__gallery__item -exp animate animate--fade js-animate">
+                    <div v-for="galleryItem in artist.data.gallery.value" class="artist__gallery__item -exp animate js-animate">
                         <div v-if="galleryItem.video" class="video js-video" data-provider="{{galleryItem.video.value.oembed.provider_name.toLowerCase()}}" v-bind:style="{paddingBottom: galleryItem.video.value.oembed.height / galleryItem.video.value.oembed.width * 100 + '%'}">
                             {{{galleryItem.video.value.oembed.html.replace( 'feature=oembed', 'enablejsapi=1' )}}}
                             <div class="video__poster js-lazy-image -cover" data-img-src="{{galleryItem.image ? galleryItem.image.value.image.url : galleryItem.video.value.oembed.thumbnail_url}}">
@@ -217,7 +230,7 @@
                 </div>
                 <div class="artist__related__label h3 -wrap">Related Artists</div>
                 <div class="artist__related js-artist-related -wrap">
-                    <div v-for="relatedArtist in relatedArtists" class="squaregrid__item artist__related__col -column--1of3 -exp-b animate animate--fade js-animate">
+                    <div v-for="relatedArtist in relatedArtists" class="squaregrid__item artist__related__col -column--1of3 -exp-b animate js-animate">
                         <a class="squaregrid__photo" href="/artist/{{relatedArtist.uri}}/">
                             <figure class="squaregrid__figure">
                                 <img class="squaregrid__image image image--{{relatedArtist.data.featureImage.value.main.dimensions.width > relatedArtist.data.featureImage.value.main.dimensions.height ? 'wide' : 'tall'}} js-lazy-image" data-img-src="{{relatedArtist.data.featureImage.value.main.url}}" />
@@ -251,7 +264,7 @@
                         </span>
                     </div>
                 </div>
-                <div v-for="slice in feature.data.body.value" class="feature__slice feature__{{slice.slice_type}} -expp animate animate--fade js-animate">
+                <div v-for="slice in feature.data.body.value" class="feature__slice feature__{{slice.slice_type}} -expp animate js-animate">
                     <div v-if="slice.slice_type === 'text'" class="{{slice.slice_type}}">
                         <div class="-col -text--left">
                             <div v-for="block in slice.value.value" class="{{block.type.replace( 'eading', '' ).replace( 'aragraph', '' )}}">
@@ -298,12 +311,12 @@
                     </div>
                     <div class="p -bump">
                         <p>Say Hello</p>
-                        <a href="mailto:{{meta.data.email.value}}" class="-grey">{{meta.data.email.value}}</a>
+                        <a href="mailto:{{meta.data.email.value}}" class="a -grey">{{meta.data.email.value}}</a>
                     </div>
                     <div class="p -bump">
                         <p>Follow Us</p>
                         <p v-for="social in socials">
-                            <a href="{{social.data.url.value}}" class="-grey" target="_blank">{{social.data.title.value}}</a>
+                            <a href="{{social.data.url.value}}" class="a -grey" target="_blank">{{social.data.title.value}}</a>
                         </p>
                     </div>
                     <div class="about__footer m -exp-t -grey">&copy; Index {{new Date().getFullYear()}} / All Images &copy; of their respective owners</div>
