Lots of updates working on issue #26

--- a/source/sass/config/_variables.scss
+++ b/source/sass/config/_variables.scss
@@ -57,6 +57,8 @@ $reel-aspect: 41.875%;
 $cinema-aspect: 56.25%;
 $filter-width: 480px;
 $header-height: 100px;
+$header-height-small: 90px;
+$header-height-tipin: 80px;
 $col-width: 780px;
 
 
