--- a/source/sass/modules/_header.scss
+++ b/source/sass/modules/_header.scss
@@ -1,16 +1,19 @@
 .header {
-    background-color: rgba( 255, 255, 255, 0.9 );
+    background-color: $white;
     height: $header-height;
     left: 0;
     position: fixed;
     top: 0;
-    transition: padding-left $base-duration $ease-cubic-sharp,
-                transform $base-duration $ease-cubic-sharp;
+    transition: opacity $base-duration $ease,
+                padding-left $base-duration $ease-cubic-sharp;
     width: 100%;
     z-index: $z_layer_10;
 
-    &.is-inactive {
-        transform: translateY( -100% );
+    &.is-tipinable {
+        height: $header-height-tipin;
+        transition: opacity $base-duration $ease,
+                    padding-left $base-duration $ease-cubic-sharp,
+                    transform $base-duration $ease-cubic-sharp;
         }
     }
 .header__wrap {
