--- a/source/sass/modules/_screens.scss
+++ b/source/sass/modules/_screens.scss
@@ -16,6 +16,9 @@
         -webkit-overflow-scrolling: touch;
         }
     }
+.screen--light {
+    background-color: $white;
+    }
 
 
 
@@ -26,25 +29,8 @@
 
 
 .intro__svg {
-    fill: $white;
-    height: 80px;
-    }
-.intro__load {
-    bottom: 0;
-    font-size: 0;
-    height: 8px;
-    left: 0;
-    position: fixed;
-    text-align: left;
-    transform: translate3d( 0, 0, 0 );
-    width: 100%;
-    }
-.intro__load__fill {
-    background-color: $white;
-    display: inline-block;
-    height: 100%;
-    transition: width $fast-duration $ease;
-    width: 0;
+    fill: $black;
+    width: 200px;
     }
 .intro.is-initialized {
     .intro__text {
