--- a/source/sass/state/_states.scss
+++ b/source/sass/state/_states.scss
@@ -24,9 +24,11 @@
 }
 
 .is-refine-open {
-    .refine,
-    .refine-clear {
+    .refine {
         transform: translate3d( 0, 0, 0 );
+        }
+    .refine-clear {
+        transform: translate3d( 0, 100%, 0 );
         }
     .refine-label {
         opacity: 0;
@@ -45,6 +47,20 @@
         &:before {
             background-color: $grey-text;
             }
+        }
+}
+
+.is-refine-clearable {
+    .filter {
+        padding-bottom: $expander-one + $header-height;
+        }
+    .refine-clear {
+        transform: translate3d( -100%, 0, 0 );
+        }
+}
+.is-refine-open.is-refine-clearable {
+    .refine-clear {
+        transform: translate3d( 0, 0, 0 );
         }
 }
 
