--- a/source/sass/state/_responsive.scss
+++ b/source/sass/state/_responsive.scss
@@ -237,4 +237,9 @@
     .artist__gallery {
         padding-bottom: $expander-two;
         }
+    .is-index-page {
+        .target--grid {
+            display: none;
+            }
+    }
 }
