--- a/source/sass/state/_states.scss
+++ b/source/sass/state/_states.scss
@@ -71,7 +71,14 @@
         }
 }
 
+.is-grid-view {
+    .icon--grid:after {
+        display: none;
+        }
+}
+
 .is-index-page {
+    .target--grid,
     .target--refine {
         display: inline-block;
         }
