--- a/source/sass/core/_icons.scss
+++ b/source/sass/core/_icons.scss
@@ -41,6 +41,7 @@
     border: 2px solid $black;
     border-radius: 100%;
     height: 18px;
+    margin-top: -3px;
     transition: border-color $base-duration $ease-cubic-sharp;
     width: 18px;
 
@@ -103,25 +104,25 @@
         position: absolute;
         }
     &:before {
-        height: 2px;
+        height: 4px;
         left: 0;
         top: 50%;
-        transform: translateY( -1px );
+        transform: translateY( -50% );
         width: 100%;
         }
     &:after {
         height: 100%;
         left: 50%;
         top: 0;
-        transform: translateX( -1px );
-        width: 2px;
+        transform: translateX( -50% );
+        width: 4px;
         }
 }
 
 
 
 .target--grid {
-    margin-right: 1px;
+    margin-right: 10px;
     }
 .target--grid,
 .target--back,
