--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -172,7 +172,7 @@
                     <div class="h4">No Artists</div>
                 </div>
                 <div v-if="isgridview" class="index__list -f-zero -text--center -wrap">
-                    <div v-for="artist in documents" class="index__tile squaregrid__item artist__related__col -column--1of3 -exp-b animate js-animate">
+                    <div v-for="artist in documents" class="index__tile squaregrid__item artist__related__col -column--1of3 -exp-b animate js-animate {{artist.show ? '' : 'is-hidden'}}" data-uuid="{{artist.uuid}}">
                         <div class="squaregrid__photo">
                             <figure class="squaregrid__figure">
                                 <a href="/artist/{{artist.uri}}/">
